# singular_defect

./: .gitignore  README.md  pyproject.toml
singular_defect/: __init__.py  angles.py  feature.py  load_model.py  model_dict.py  sd.py
tools/: eig.py  plot_angle.py  plot_eig.py  plot_initial.py  plot_noninitial.py  plot_norm.py  plot_right_sv.py  plot_subspace_coef.py  singular_defects.py  singular_defects_empirical.py
