[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "singular_defect"
version = "0.1"
description = "singular_defect."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch",
    "transformers",
    "seaborn",
    "accelerate",
    "datasets",
]

[project.optional-dependencies]
train = []
build = []

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "monkey*", "tools*", "paper*", "figures*", "assets*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*", "monkey*", "tools*", "paper*", "figures*", "assets*"]

[tool.black]
# Only used by `hf-doc-builder´.
line-length = 119
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 119
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
extend-select = [
    "C", # Complexity
    "E", # PEP8 errors
    "F", # PEP8 formatting
    "I", # Import sorting
    "UP", # Pyupgrade upgrades
    "W", # PEP8 warnings
    "PT009", # Pytest assertions
    "RUF022", # Sorting of __all__
]
ignore = [
    "C901", # Function too complex
    "E501", # Line length (handled by ruff-format)
    "F841", # unused variable
    "UP007", # X | Y style Unions
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["peft"]
